# worldlines

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
config/: sources.json
docs/: ai-prompt-spec.md  api-contracts.md  configuration.md  schemas.md  source-adapters.md  storage-design.md  system-design.md  web-frontend-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChangeTypeBadge.tsx  DimensionBadge.tsx  FilterBar.tsx  ImportanceBadge.tsx  Layout.tsx  Pagination.tsx
frontend/src/pages/: Dashboard.tsx  DigestDetail.tsx  DigestList.tsx  DimensionDetail.tsx  ExposureList.tsx  ItemDetail.tsx  ItemList.tsx  Map.tsx  Runs.tsx  SummaryList.tsx  TickerDetail.tsx  TickerIndex.tsx
frontend/src/types/: api.ts
src/worldlines/: __init__.py  config.py  jobs.py  main.py
src/worldlines/analysis/: __init__.py  classifier.py  prompt.py
src/worldlines/digest/: __init__.py  digest.py  periodic.py  renderer.py  summarizer.py  (+1 more)
tests/: test_backup.py  test_classifier.py  test_config.py  test_dedup.py  test_digest.py  test_earnings_adapter.py  test_exposure_mapper.py  test_exposure_prompt.py  test_github_adapter.py  test_health.py  test_hn_adapter.py  test_jobs.py  test_linking_rationale.py  test_normalize.py  test_prompt.py  test_reddit_adapter.py  test_registry.py  test_rss_adapter.py  test_storage.py  test_summarizer.py  test_web_api.py
(+25 files in other folders)
