[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldlines"
version = "0.1.0"
description = "Long-term trend intelligence system"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
    "feedparser",
    "python-dotenv",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
worldlines = "worldlines.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worldlines"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
