[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldlines"
version = "0.1.0"
description = "Long-term trend intelligence system"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
    "feedparser",
    "python-dotenv",
    "apscheduler>=3.10,<4",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
worldlines = "worldlines.main:main"
worldlines-web = "worldlines.web.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worldlines"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
